# ERT_Exercise

./: .gitignore  LICENSE  README.md
documents/: edp_ksmith.docx
exercise_1/: .gitignore  Makefile  README.md
exercise_1/iri_2016/: Makefile  cira.for  igrf.for  iri_2016.prj  iridreg.for  irisub.for  iritec.for
exercise_1/iri_edp/: Makefile  iri_edp  iri_edp.c  iri_sub.h  iri_web.h  iriedp.c
exercise_2/: Makefile  README.md  coordinate_conversion.h
exercise_3/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  swpctools.py
exercise_3/swpctools/: exceptions.py  logging.json  main.py  routes.py  service.py
exercise_3/swpctools/endpoints/rtsw/: __init__.py  commands.py  datastore.py  exceptions.py  main.py  request.py  routes.py
exercise_3/swpctools/endpoints/rtsw/templates/: _rtsw_root.html  records_csv.html  records_raw.html
exercise_3/swpctools/templates/: _base.html  _swpc_root.html  about.html  config_and_status.html
exercise_4/: .gitignore  Makefile  README.md  test_j.c
exercise_vm/: .gitignore  Makefile  Makefile.venv  README.md  Vagrantfile
exercise_vm/provision/: ansible.cfg  id_rsa  id_rsa.pub  playbook.yaml
exercise_vm/provision/scripts/: change-to-ert-user
