[tool.poetry]
name = "swpctools"
version = "0.1.0"
description = "NOAA Space Weather Prediction Center Query Tool"
authors = ["Krishna Smith <krissmi@gmail.com>"]
maintainers = ["Krishna Smith <krissmi@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/krissmi/ERT_Exercise"
packages = [
    { include = "swpctools" }
]

[tool.poetry.scripts]
swpctools = "swpctools.main:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.1.4"
pyarrow = "^14.0.1"
Flask = "^3.0.0"
psutil = "^5.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
